tests/lean/1163.lean.expected.out
1163.lean:6:8-6:15: warning: declaration uses 'sorry'
1163.lean:11:8-11:15: warning: declaration uses 'sorry'
1163.lean:13:16-13:17: error: failed to synthesize instance
  OfNat Bool 0
1163.lean:15:8-15:15: warning: declaration uses 'sorry'
1163.lean:18:18-18:19: error: failed to synthesize instance
  OfNat Bool 0
